--- a/WebContent/edit-movie.html
+++ b/WebContent/edit-movie.html
@@ -10,7 +10,7 @@
      <header>
      <span id="head" >Movie Cruiser </span>
      <img src="./images/logo.png" />
-     <a id="movies" href="movie-list-customer.html">Movies</a>
+     <a id="movies" href="movie-list-admin.html">Movies</a>
      </header>
                                 
     <div>
